Fix InventoryDropService.java compile errors
- Rename 'protected' field to 'protectedItem' (reserved keyword)
- Replace Stream.toList() with collect(Collectors.toList()) for Java 8 compatibility
- Add Collectors import

This file was blocking all compiles since the earlier session.
The shadowJar is now rebuilt with timestamp 6:57 PM.